Add footer files

--- a/main.html
+++ b/main.html
@@ -14,11 +14,11 @@
     <meta property="og:site_name" content="">
     <meta property="og:description" content="">
 
-    <title></title>
+    <title>Marista de Champagnat</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico"/>
 
     <!-- Fonts (Google Fonts/Typekit) -->
-    <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,500' rel='stylesheet' type='text/css'>
+    <!-- <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,500' rel='stylesheet' type='text/css'> -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -101,11 +101,51 @@
   </main> <!-- end -->
 
   <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 text-center">
-          <img src="src/images/copyright.png" alt="Logo">
-          <p>2018 - Todos os direitos reservados</p>
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-md-6 text-center">
+            <img src="src/images/copyright.png" alt="Logo">
+            <ul class="list-inline">
+              <li class="list-inline-item"><a href="">fb</a></li>
+              <li class="list-inline-item"><a href="">lkd</a></li>
+              <li class="list-inline-item"><a href="">yot</a></li>
+              <li class="list-inline-item"><a href="">twi</a></li>
+            </ul>
+          </div>
+          <div class="col-xs-12 col-md-6">
+            Inscreva-se PARA RECEBER NOSSAS ATUALIZAÇÕES
+            <input type="text" placeholder="Insira seu e-mail">
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-xs-12 text-center">
+            <ul class="list-inline">
+              <li class="list-inline-item"><a href="">TERMOS DE USO</a></li>
+              <li class="list-inline-item"><a href="">SITES GLOBAIS</a></li>
+              <li class="list-inline-item"><a href="">POLÍTICA DE PRIVACIDADE</a></li>
+              <li class="list-inline-item"><a href="">MAPA DO SITE</a></li>
+              <li class="list-inline-item"><a href="">ENVIAR MATERIAL</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-md-4">
+            <p class="footer-bottom__copy">2018 - Todos os direitos reservados</p>
+          </div>
+          <div class="col-xs-12 col-md-4">
+            Páprica.ag
+          </div>
+          <div class="col-xs-12 col-md-2">
+            busca
+          </div>
+          <div class="col-xs-12 col-md-2">
+            <a class="footer-bottom__lang" href="">PORTUGUÊS (BR)</a>
+          </div>
         </div>
       </div>
     </div>
