Add styles of footer

--- a/main.html
+++ b/main.html
@@ -106,7 +106,7 @@
         <div class="row">
           <div class="col-xs-12 col-md-6 text-center">
             <img src="src/images/copyright.png" alt="Logo">
-            <ul class="list-inline">
+            <ul class="list-inline footer-top__social">
               <li class="list-inline-item"><a href="">fb</a></li>
               <li class="list-inline-item"><a href="">lkd</a></li>
               <li class="list-inline-item"><a href="">yot</a></li>
@@ -114,13 +114,19 @@
             </ul>
           </div>
           <div class="col-xs-12 col-md-6">
-            Inscreva-se PARA RECEBER NOSSAS ATUALIZAÇÕES
-            <input type="text" placeholder="Insira seu e-mail">
+            <label class="footer-top__label" for="">Inscreva-se PARA RECEBER NOSSAS ATUALIZAÇÕES</label>
+            <div class="input-group">
+              <input class="form-control form-control--footer" type="text" placeholder="Insira seu e-mail">
+              <div class="input-group-append">
+                <button class="btn btn-newsletter" type="button">></button>
+              </div>
+
+            </div>
           </div>
         </div>
         <div class="row justify-content-center">
           <div class="col-xs-12 text-center">
-            <ul class="list-inline">
+            <ul class="list-inline footer-top__menu">
               <li class="list-inline-item"><a href="">TERMOS DE USO</a></li>
               <li class="list-inline-item"><a href="">SITES GLOBAIS</a></li>
               <li class="list-inline-item"><a href="">POLÍTICA DE PRIVACIDADE</a></li>
