Add styles of footer

--- a/main.html
+++ b/main.html
@@ -105,20 +105,20 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-md-6 text-center">
-            <img src="src/images/copyright.png" alt="Logo">
+            <img class="footer-top__logo" src="src/images/logo-marista-w@2x.png" alt="Marista">
             <ul class="list-inline footer-top__social">
-              <li class="list-inline-item"><a href="">fb</a></li>
-              <li class="list-inline-item"><a href="">lkd</a></li>
-              <li class="list-inline-item"><a href="">yot</a></li>
-              <li class="list-inline-item"><a href="">twi</a></li>
+              <li class="list-inline-item"><a href=""><img src="/src/images/icon-facebook@2x.png" alt="facebook"></a></li>
+              <li class="list-inline-item"><a href=""><img src="/src/images/icon-linkedin@2x.png" alt="linkedin"></a></li>
+              <li class="list-inline-item"><a href=""><img src="/src/images/icon-youtube@2x.png" alt="youtube"></a></li>
+              <li class="list-inline-item"><a href=""><img src="/src/images/icon-twitter@2x.png" alt="twitter"></a></li>
             </ul>
           </div>
           <div class="col-xs-12 col-md-6">
-            <label class="footer-top__label" for="">Inscreva-se PARA RECEBER NOSSAS ATUALIZAÇÕES</label>
+            <label class="footer-top__label" for=""><span>Inscreva-se</span> PARA RECEBER NOSSAS ATUALIZAÇÕES</label>
             <div class="input-group">
               <input class="form-control form-control--footer" type="text" placeholder="Insira seu e-mail">
               <div class="input-group-append">
-                <button class="btn btn-newsletter" type="button">></button>
+                <button class="btn btn-newsletter" type="button"></button>
               </div>
 
             </div>
@@ -140,17 +140,29 @@
     <div class="footer-bottom">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-md-4">
+          <div class="col-12 col-md-4">
             <p class="footer-bottom__copy">2018 - Todos os direitos reservados</p>
           </div>
-          <div class="col-xs-12 col-md-4">
-            Páprica.ag
+          <div class="col-6 col-md-4 text-right">
+            <img src="/src/images/logo-paprica.svg" alt="Páprica">
           </div>
-          <div class="col-xs-12 col-md-2">
-            busca
+          <div class="col-6 col-md-1">
+            <a class="footer-bottom__search" href="">
+              <img src="/src/images/icon-lupa2x.png" alt="lupa">
+            </a>
           </div>
-          <div class="col-xs-12 col-md-2">
-            <a class="footer-bottom__lang" href="">PORTUGUÊS (BR)</a>
+          <div class="col-12 col-md-3">
+            <div class="dropdown">
+              <button class="dropdown-toggle footer-bottom__lang" type="button" id="dropdownLang" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                PORTUGUÊS (BR)
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownLang">
+                <a class="dropdown-item" href="#">PORTUGUÊS (BR)</a>
+                <a class="dropdown-item" href="#">PORTUGUÊS (BR)</a>
+                <a class="dropdown-item" href="#">PORTUGUÊS (BR)</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
