Add styles of footer

--- a/main.html
+++ b/main.html
@@ -139,7 +139,7 @@
     </div>
     <div class="footer-bottom">
       <div class="container">
-        <div class="row">
+        <div class="row align-items-center">
           <div class="col-12 col-md-4">
             <p class="footer-bottom__copy">2018 - Todos os direitos reservados</p>
           </div>
