--- a/main.html
+++ b/main.html
@@ -62,15 +62,15 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
+          <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">INSTITUTO MARISTA <span class="sr-only">(current)</span></a>
+              <a class="nav-link nav-link--arrow" href="#"><span>INSTITUTO MARISTA</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">SER MARISTA DE CHAMPAGNAT <span class="sr-only">(current)</span></a>
+              <a class="nav-link nav-link--arrow" href="#"><span>SER MARISTA DE CHAMPAGNAT</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">MISSÃO MARISTA</a>
+              <a class="nav-link nav-link--arrow" href="#"><span>MISSÃO MARISTA</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#"><img src="/src/images/icon-facebook@2x.png" alt="facebook"></a>
@@ -85,10 +85,24 @@
               <a class="nav-link" href="#"><img src="/src/images/icon-twitter@2x.png" alt="twitter"></a>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
+          <!-- <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
+          </form> -->
+          <a class="navbar__search" href="">
+            <img src="/src/images/icon-lupa2x.png" alt="lupa">
+          </a>
+          <div class="dropdown">
+            <button class="dropdown-toggle footer-bottom__lang" type="button" id="dropdownLang" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              ENG
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownLang">
+              <a class="dropdown-item" href="#">PORTUGUÊS (BR)</a>
+              <a class="dropdown-item" href="#">PORTUGUÊS (BR)</a>
+              <a class="dropdown-item" href="#">PORTUGUÊS (BR)</a>
+            </div>
+          </div>
         </div>
       </nav>
     </div>
