--- a/main.html
+++ b/main.html
@@ -63,6 +63,7 @@
 
         <div class="collapse navbar-collapse" id="navbarOne">
           <ul class="navbar-nav">
+
             <li class="nav-item active">
               <a class="nav-link nav-link--arrow" href="#"><span>INSTITUTO MARISTA</span></a>
             </li>
@@ -106,7 +107,7 @@
       </div>
     </nav>
 
-    <nav class="navbar navbar-expand-lg navbar-light navbar-secondary" role="navigation">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-secondary navbar-secondary" role="navigation">
       <div class="container">
         <!-- <a class="navbar-brand" href="#">Navbar Secondary</a> -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTwo" aria-controls="navbarTwo" aria-expanded="false" aria-label="Toggle navigation">
@@ -115,6 +116,55 @@
 
         <div class="collapse navbar-collapse" id="navbarTwo">
           <ul class="navbar-nav">
+
+            <li class="nav-item dropdown dropdown--megamenu">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                MENU
+              </a>
+              <div class="dropdown-menu dropdown-menumega" aria-labelledby="navbarDropdown">
+                <div class="container">
+                  <div class="row">
+                    <div class="col-md-4">
+                      <span class="text-uppercase text-white">Category 1</span>
+                      <ul class="nav flex-column">
+                        <li class="nav-item">
+                          <a class="nav-link active" href="#">Active</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Link item</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Link item</a>
+                        </li>
+                      </ul>
+                    </div>
+                    <!-- /.col-md-4  -->
+                    <div class="col-md-4">
+                      <ul class="nav flex-column">
+                        <li class="nav-item">
+                          <a class="nav-link active" href="#">Active</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Link item</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Link item</a>
+                        </li>
+                      </ul>
+                    </div>
+                    <!-- /.col-md-4  -->
+                    <div class="col-md-4">
+                      <a href="">
+                        <img src="https://dummyimage.com/200x100/ccc/000&text=image+link" alt="" class="img-fluid">
+                      </a>
+                      <p class="text-white">Short image call to action</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </li>
             <li class="nav-item active">
               <a class="nav-link nav-link--arrow" href="#"><span>HOME</span></a>
             </li>
@@ -180,6 +230,10 @@
         </div>
       </div>
     </nav>
+
+    <div class="header-blc__megamenu">
+    </div>
+
   </header> <!-- end -->
 
   <main>
