Add styles of header

--- a/main.html
+++ b/main.html
@@ -126,7 +126,58 @@
                 <div class="container">
                   <div class="row">
                     <div class="col-md-4">
-                      <span class="text-uppercase text-white">Category 1</span>
+                      <h5 class="text-uppercase">INSTITUTO<br>MARISTA</h5>
+                      <ul class="nav flex-column">
+                        <li class="nav-item">
+                          <a class="nav-link active" href="http://www.google.com" target="_blank">História</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Fundador</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" data-toggle="collapse" href="#collapseSubmenu1">Nossa presença</a>
+                          <div id="collapseSubmenu1" class="collapse">
+                            <a class="dropdown-item" href="#">Link 1</a>
+                            <a class="dropdown-item" href="#">Link 2</a>
+                            <a class="dropdown-item" href="#">Link 3</a>
+                          </div>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Governo Geral</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" data-toggle="collapse" href="#collapseSubmenu1">Administração Geral</a>
+                          <div id="collapseSubmenu1" class="collapse">
+                            <a class="dropdown-item" href="#">Link 1</a>
+                            <a class="dropdown-item" href="#">Link 2</a>
+                            <a class="dropdown-item" href="#">Link 3</a>
+                          </div>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" data-toggle="collapse" href="#collapseSubmenu1">Casa General</a>
+                          <div id="collapseSubmenu1" class="collapse">
+                            <a class="dropdown-item" href="#">Link 1</a>
+                            <a class="dropdown-item" href="#">Link 2</a>
+                            <a class="dropdown-item" href="#">Link 3</a>
+                          </div>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Casa de Manziana</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Capítulos Gerais</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Conferência Gerais</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Assembléia da Missão</a>
+                        </li>
+                      </ul>
+                    </div>
+                    <!-- /.col-md-4  -->
+                    <div class="col-md-4">
+                      <h5 class="text-uppercase active">SER MARISTA DE<br>CHAMPAGNAT</h5>
                       <ul class="nav flex-column">
                         <li class="nav-item">
                           <a class="nav-link active" href="#">Active</a>
@@ -141,20 +192,7 @@
                     </div>
                     <!-- /.col-md-4  -->
                     <div class="col-md-4">
-                      <ul class="nav flex-column">
-                        <li class="nav-item">
-                          <a class="nav-link active" href="#">Active</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">Link item</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">Link item</a>
-                        </li>
-                      </ul>
-                    </div>
-                    <!-- /.col-md-4  -->
-                    <div class="col-md-4">
+                      <h5 class="text-uppercase">MISSÃO<br>MARISTA</h5>
                       <a href="">
                         <img src="https://dummyimage.com/200x100/ccc/000&text=image+link" alt="" class="img-fluid">
                       </a>
