Add styles of header

--- a/main.html
+++ b/main.html
@@ -107,7 +107,7 @@
       </div>
     </nav>
 
-    <nav class="navbar navbar-expand-lg navbar-light navbar-secondary navbar-secondary" role="navigation">
+    <nav class="navbar navbar-expand-lg navbar-secondary" role="navigation">
       <div class="container">
         <!-- <a class="navbar-brand" href="#">Navbar Secondary</a> -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTwo" aria-controls="navbarTwo" aria-expanded="false" aria-label="Toggle navigation">
@@ -134,28 +134,29 @@
                         <li class="nav-item">
                           <a class="nav-link" href="#">Fundador</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item nav-item--collapse">
                           <a class="nav-link" data-toggle="collapse" href="#collapseSubmenu1">Nossa presença</a>
                           <div id="collapseSubmenu1" class="collapse">
-                            <a class="dropdown-item" href="#">Link 1</a>
-                            <a class="dropdown-item" href="#">Link 2</a>
-                            <a class="dropdown-item" href="#">Link 3</a>
+                            <a class="dropdown-item" href="#">Aonde estamos</a>
+                            <a class="dropdown-item" href="#">Regiões do Instituto</a>
+                            <a class="dropdown-item" href="#">Unidades Administrativas</a>
+                            <a class="dropdown-item" href="#">Estatísticas</a>
                           </div>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#">Governo Geral</a>
                         </li>
-                        <li class="nav-item">
-                          <a class="nav-link" data-toggle="collapse" href="#collapseSubmenu1">Administração Geral</a>
-                          <div id="collapseSubmenu1" class="collapse">
+                        <li class="nav-item nav-item--collapse">
+                          <a class="nav-link" data-toggle="collapse" href="#collapseSubmenu2">Administração Geral</a>
+                          <div id="collapseSubmenu2" class="collapse">
                             <a class="dropdown-item" href="#">Link 1</a>
                             <a class="dropdown-item" href="#">Link 2</a>
                             <a class="dropdown-item" href="#">Link 3</a>
                           </div>
                         </li>
-                        <li class="nav-item">
-                          <a class="nav-link" data-toggle="collapse" href="#collapseSubmenu1">Casa General</a>
-                          <div id="collapseSubmenu1" class="collapse">
+                        <li class="nav-item nav-item--collapse">
+                          <a class="nav-link" data-toggle="collapse" href="#collapseSubmenu3">Casa General</a>
+                          <div id="collapseSubmenu3" class="collapse">
                             <a class="dropdown-item" href="#">Link 1</a>
                             <a class="dropdown-item" href="#">Link 2</a>
                             <a class="dropdown-item" href="#">Link 3</a>
@@ -177,26 +178,107 @@
                     </div>
                     <!-- /.col-md-4  -->
                     <div class="col-md-4">
-                      <h5 class="text-uppercase active">SER MARISTA DE<br>CHAMPAGNAT</h5>
+                      <h5 class="text-uppercase">SER MARISTA DE<br>CHAMPAGNAT</h5>
                       <ul class="nav flex-column">
                         <li class="nav-item">
-                          <a class="nav-link active" href="#">Active</a>
+                          <a class="nav-link" href="#">Família Global</a>
+                        </li>
+                        <li class="nav-item nav-item--collapse">
+                          <a class="nav-link" data-toggle="collapse" href="#collapseSubmenu4">Espiritualidade Marista</a>
+                          <div id="collapseSubmenu4" class="collapse">
+                            <a class="dropdown-item" href="#">Link 1</a>
+                            <a class="dropdown-item" href="#">Link 2</a>
+                            <a class="dropdown-item" href="#">Link 3</a>
+                          </div>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Link item</a>
+                          <a class="nav-link" href="#">Formação Conjunta</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Link item</a>
+                          <a class="nav-link" href="#">Retratos Vivos</a>
+                        </li>
+                        <li class="nav-item nav-item--collapse">
+                          <a class="nav-link" data-toggle="collapse" href="#collapseSubmenu5">Irmãos Maristas</a>
+                          <div id="collapseSubmenu5" class="collapse">
+                            <a class="dropdown-item" href="#">Link 1</a>
+                            <a class="dropdown-item" href="#">Link 2</a>
+                            <a class="dropdown-item" href="#">Link 3</a>
+                          </div>
+                        </li>
+                        <li class="nav-item nav-item--collapse">
+                          <a class="nav-link" data-toggle="collapse" href="#collapseSubmenu5">Maristas Leigos</a>
+                          <div id="collapseSubmenu5" class="collapse">
+                            <a class="dropdown-item" href="#">Link 1</a>
+                            <a class="dropdown-item" href="#">Link 2</a>
+                            <a class="dropdown-item" href="#">Link 3</a>
+                          </div>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Santos Maristas</a>
                         </li>
                       </ul>
                     </div>
                     <!-- /.col-md-4  -->
                     <div class="col-md-4">
                       <h5 class="text-uppercase">MISSÃO<br>MARISTA</h5>
-                      <a href="">
+                      <ul class="nav flex-column">
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Valores e Princípios</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Escolas</a>
+                        </li>
+                        <li class="nav-item nav-item--collapse">
+                          <a class="nav-link" data-toggle="collapse" href="#collapseSubmenu6">Universidades</a>
+                          <div id="collapseSubmenu6" class="collapse">
+                            <a class="dropdown-item" href="#">Link 1</a>
+                            <a class="dropdown-item" href="#">Link 2</a>
+                            <a class="dropdown-item" href="#">Link 3</a>
+                          </div>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Editoras</a>
+                        </li>
+                        <li class="nav-item nav-item--collapse">
+                          <a class="nav-link" data-toggle="collapse" href="#collapseSubmenu6">Rede de Solidariedade</a>
+                          <div id="collapseSubmenu6" class="collapse">
+                            <a class="dropdown-item" href="#">Link 1</a>
+                            <a class="dropdown-item" href="#">Link 2</a>
+                            <a class="dropdown-item" href="#">Link 3</a>
+                          </div>
+                        </li>
+                        <li class="nav-item nav-item--collapse">
+                          <a class="nav-link" data-toggle="collapse" href="#collapseSubmenu6">Rede de Voluntários</a>
+                          <div id="collapseSubmenu6" class="collapse">
+                            <a class="dropdown-item" href="#">Link 1</a>
+                            <a class="dropdown-item" href="#">Link 2</a>
+                            <a class="dropdown-item" href="#">Link 3</a>
+                          </div>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Direito das Crianças</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Pastoral Juvenil Marista</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Presenças Especiais</a>
+                        </li>
+                      </ul>
+                      <!-- <a href="">
                         <img src="https://dummyimage.com/200x100/ccc/000&text=image+link" alt="" class="img-fluid">
                       </a>
-                      <p class="text-white">Short image call to action</p>
+                      <p class="text-white">Short image call to action</p> -->
+                    </div>
+                    <div class="col-12">
+                      <ul class="dropdown-menumega__bottomlinks">
+                        <li><a class="" href="">ATIVIDADES</a></li>
+                        <li><a class="" href="">NOTÍCIAS</a></li>
+                        <li><a class="" href="">BIBLIOTECA</a></li>
+                        <li><a class="" href="">FOTOS</a></li>
+                        <li><a class="" href="">VÍDEOS</a></li>
+                        <li><a class="" href="">FALE CONOSCO</a></li>
+                      </ul>
                     </div>
                   </div>
                 </div>
