Add styles of header

--- a/main.html
+++ b/main.html
@@ -120,6 +120,9 @@
             <li class="nav-item dropdown dropdown--megamenu">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
+                <div class="icon-three">
+                  <div class="hamburger hamburger-three"></div>
+                </div>
                 MENU
               </a>
               <div class="dropdown-menu dropdown-menumega" aria-labelledby="navbarDropdown">
@@ -277,7 +280,7 @@
                         <li><a class="" href="">BIBLIOTECA</a></li>
                         <li><a class="" href="">FOTOS</a></li>
                         <li><a class="" href="">VÍDEOS</a></li>
-                        <li><a class="" href="">FALE CONOSCO</a></li>
+                        <li><a class="btn btn-fale" href="">FALE CONOSCO</a></li>
                       </ul>
                     </div>
                   </div>
@@ -344,16 +347,15 @@
               </div>
             </li>
             <li class="nav-item active">
-              <a class="nav-link nav-link--button" href="#"><span>FALE CONOSCO</span></a>
+              <a class="nav-link nav-link--button" href="#">
+                <span>FALE CONOSCO</span>
+                <img src="src/images/icon-envelope@2x.png" alt="envelope">
+              </a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-
-    <div class="header-blc__megamenu">
-    </div>
-
   </header> <!-- end -->
 
   <main>
