Add styles of header

--- a/main.html
+++ b/main.html
@@ -64,14 +64,23 @@
         <div class="collapse navbar-collapse" id="navbarOne">
           <ul class="navbar-nav">
 
-            <li class="nav-item active">
-              <a class="nav-link nav-link--arrow" href="#"><span>INSTITUTO MARISTA</span></a>
+            <li class="nav-item nav-item--sep active">
+              <a class="nav-link nav-link--arrow" href="#">
+                <span>INSTITUTO MARISTA</span>
+                <i class="icon"></i>
+              </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link nav-link--arrow" href="#"><span>SER MARISTA DE CHAMPAGNAT</span></a>
+            <li class="nav-item nav-item--sep">
+              <a class="nav-link nav-link--arrow" href="#">
+                <span>SER MARISTA DE CHAMPAGNAT</span>
+                <i class="icon"></i>
+              </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link nav-link--arrow" href="#"><span>MISSÃO MARISTA</span></a>
+            <li class="nav-item nav-item--sep">
+              <a class="nav-link nav-link--arrow" href="#">
+                <span>MISSÃO MARISTA</span>
+                <i class="icon"></i>
+              </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#"><img src="/src/images/icon-facebook@2x.png" alt="facebook"></a>
@@ -86,10 +95,6 @@
               <a class="nav-link" href="#"><img src="/src/images/icon-twitter@2x.png" alt="twitter"></a>
             </li>
           </ul>
-          <!-- <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form> -->
           <a class="navbar-primary__search" href="">
             <img src="/src/images/icon-lupa2x.png" alt="lupa">
           </a>
@@ -296,10 +301,21 @@
                 ATIVIDADES
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarAtividades">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <div class="container">
+                  <div class="row">
+                    <div class="col-12 col-md-4">
+                      <a class="dropdown-item" href="#">MARCELINO CHAMPAGNAT</a>
+                      <a class="dropdown-item" href="#">SUPERIOR GERAL</a>
+                    </div>
+                    <div class="col-12 col-md-4">
+                      <a class="dropdown-item" href="#">SANTOS MARISTAS</a>
+                      <a class="dropdown-item" href="#">VIDA MARISTA</a>
+                    </div>
+                    <div class="col-12 col-md-4">
+                      <a class="dropdown-item" href="#">TESTEMUNHOS</a>
+                    </div>
+                  </div>
+                </div>
               </div>
             </li>
             <li class="nav-item dropdown">
@@ -307,10 +323,21 @@
                 NOTÍCIAS
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarNoticias">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <div class="container">
+                  <div class="row">
+                    <div class="col-12 col-md-4">
+                      <a class="dropdown-item" href="#">ARQUIVO</a>
+                      <a class="dropdown-item" href="#">POR TEMAS</a>
+                    </div>
+                    <div class="col-12 col-md-4">
+                      <a class="dropdown-item" href="#">DAS UNIDADES ADMINISTRAÇÃO</a>
+                      <a class="dropdown-item" href="#">NOTÍCIAS MARISTAS</a>
+                    </div>
+                    <div class="col-12 col-md-4">
+                      <a class="dropdown-item" href="#">IRMÃOS FALECIDOS</a>
+                    </div>
+                  </div>
+                </div>
               </div>
             </li>
             <li class="nav-item dropdown">
@@ -318,10 +345,22 @@
                 FOTOS
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarFotos">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <div class="container">
+                  <div class="row">
+                    <div class="col-12 col-md-4">
+                      <a class="dropdown-item" href="#">GALERIAS</a>
+                      <a class="dropdown-item" href="#">FOTOS DO DIA</a>
+                    </div>
+                    <div class="col-12 col-md-4">
+                      <a class="dropdown-item" href="#">LUGARES MARISTA</a>
+                      <a class="dropdown-item" href="#">BOA MÃE</a>
+                    </div>
+                    <div class="col-12 col-md-4">
+                      <a class="dropdown-item" href="#">LOGOS</a>
+                      <a class="dropdown-item" href="#">BANCO DE IMAGENS</a>
+                    </div>
+                  </div>
+                </div>
               </div>
             </li>
             <li class="nav-item dropdown">
@@ -329,10 +368,21 @@
                 VÍDEOS
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarVideos">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <div class="container">
+                  <div class="row">
+                    <div class="col-12 col-md-4">
+                      <a class="dropdown-item" href="#">MARCELINO CHAMPAGNAT</a>
+                      <a class="dropdown-item" href="#">SUPERIOR GERAL</a>
+                    </div>
+                    <div class="col-12 col-md-4">
+                      <a class="dropdown-item" href="#">SANTOS MARISTAS</a>
+                      <a class="dropdown-item" href="#">VIDA MARISTA</a>
+                    </div>
+                    <div class="col-12 col-md-4">
+                      <a class="dropdown-item" href="#">TESTEMUNHOS</a>
+                    </div>
+                  </div>
+                </div>
               </div>
             </li>
             <li class="nav-item dropdown">
@@ -340,10 +390,32 @@
                 BIBLIOTECA
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarVideos">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <div class="container">
+                  <div class="row">
+                    <div class="col-12 col-md-3">
+                      <a class="dropdown-item" href="#">MARCELINO CHAMPAGNAT</a>
+                      <a class="dropdown-item" href="#">DOCUMENTOS MARISTAS</a>
+                      <a class="dropdown-item" href="#">CIRCULARES DOS SUPERIORES</a>
+                    </div>
+                    <div class="col-12 col-md-3">
+                      <a class="dropdown-item" href="#">NOTÍCIAS MARISTAS</a>
+                      <a class="dropdown-item" href="#">FMS MENSAGEM</a>
+                      <a class="dropdown-item" href="#">FMS STUDIA</a>
+                    </div>
+                    <div class="col-12 col-md-3">
+                      <a class="dropdown-item" href="#">CADERNOS MARISTA</a>
+                      <a class="dropdown-item" href="#">BULLETIN DE I’ISNTITUT</a>
+                      <a class="dropdown-item" href="#">BOLETIM MARISTA</a>
+                    </div>
+                    <div class="col-12 col-md-3">
+                      <a class="dropdown-item" href="#">PUBLICAÇÕES</a>
+                      <a class="dropdown-item" href="#">MÚSICAS</a>
+                      <a class="dropdown-item" href="#">ORAÇÕES</a>
+                      <a class="dropdown-item" href="#">LIVROS RECEBIDOS</a>
+                      <a class="dropdown-item" href="#">HISTÓRIA MARISTA</a>
+                    </div>
+                  </div>
+                </div>
               </div>
             </li>
             <li class="nav-item active">
